[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["Anastasia <ashevchenko629@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
sqlalchemy = "^2.0.25"
python-multipart = "^0.0.6"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
